...
            flow.minimumInteritemSpacing = Self.margin
            flow.sectionInset = UIEdgeInsets(top: 0, left: Self.margin, bottom: 0, right: Self.margin)
        }
    }

    func setupAccessibility() {
        collectionView.accessibilityIdentifier = "home.collection"
        navigationItem.searchController?.searchBar.searchTextField.accessibilityIdentifier = "home.searchbar"
    }
}

