...
    init(artObjectsService: ArtObjectsService, delegate: HomePresenterDelegate) {
        self.artObjectsService = artObjectsService
        self.delegate = delegate
    }

    func viewDidAttach() {
        view?.set(title: "Home")

        updateObjects()
    }
}

extension HomePresenterImpl: HomePresenter {
...
